<resources>
    <string name="app_name">Go Chat</string>
    <string name="verification_code">Код подтверждения</string>
    <string name="message_in_fragment_verify_screen">Пожалуйста введите код подтверждения отправленный на номер %1$s</string>
    <string name="resend">Отправить повторно  (%1$s)</string>
    <string name="resendWithoutTimer">Отправить повторно</string>
    <string name="registration">Регистрация</string>
    <string name="phone_number_verify">Введите свой номер телефона для регистрации</string>
    <string name="next">Продолжить</string>
    <string name="phone_number_hint">Номер необходимо вводить в международном формате</string>
    <string name="loading">""</string>
    <string name="code_error">"Неверный код подтверждения</string>
    <string name="internet">Нет доступа к интернету</string>
    <string name="edit">Редактировать</string>
    <string name="profile">Профиль</string>
    <string name="posts">Посты</string>
    <string name="friends">Друзья</string>
    <string name="photos">Фото</string>
    <string name="chats">Чаты</string>
    <string name="dark">Темная тема</string>
    <string name="black_list">Черный список</string>
    <string name="security">Приватность</string>
    <string name="about">О приложении</string>
    <string name="whats_name">Как вас зовут?</string>
    <string name="send_message">Сообщение</string>
    <string name="create_post">Создание записи</string>
    <string name="please_fill_all_data">Пожалуйста заполните все данные</string>
    <string name="empty_posts">Вы не создали ни одного поста\nДля создания нажмите +</string>
    <string name="contacts">Контакты</string>
    <string name="contact_not_exist">Этот контакт не зарегистрирован в приложении</string>
    <string name="photo_loading">Идет загрузка. Пожалуйста подождите</string>
    <string name="feed">Интересное</string>
    <string name="minute_abbreviation">м</string>
    <string name="hour_abbreviation">ч</string>
    <string name="day_abbreviation">д</string>
    <string name="no_messages_yet">Сообщений пока нет</string>
    <string name="start_messaging">Начините общение!</string>
    <string name="who_send">Вы: </string>
    <string name="reply">Ответить</string>
    <string name="was_read">Прочитать</string>
    <string name="message_channel_name">Messages</string>
    <string name="message_channel_desc">Messages from chats</string>
    <string name="friends_without_posts">Никто из друзей пока не создал запись</string>
    <string name="create_post_hope">Сделайте это первым!</string>
</resources>