<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Денис Попков"
        android:fontFamily="@font/roboto"
        android:textColor="@color/blackColor"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/grayColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/edit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_circle"
        android:padding="5dp"
        android:src="@drawable/edit_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto"
        android:text="@string/edit"
        android:textColor="@color/blackColor"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/edit_icon"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dark_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dark_blue_circle"
        android:padding="5dp"
        android:src="@drawable/moon_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/change_theme_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/dark"
        android:textColor="@color/blackColor"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/edit_icon"
        app:layout_constraintTop_toBottomOf="@+id/edit_text" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/black_list_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/black_circle"
        android:padding="5dp"
        android:src="@drawable/black_list_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/black_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/black_list"
        android:textColor="@color/blackColor"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/edit_icon"
        app:layout_constraintTop_toBottomOf="@+id/change_theme_text" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/security_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/orange_circle"
        android:padding="5dp"
        android:src="@drawable/security_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_list_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/security_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/security"
        android:textColor="@color/blackColor"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/security_icon"
        app:layout_constraintTop_toBottomOf="@+id/black_list_text" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/about_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/green_circle"
        android:padding="5dp"
        android:src="@drawable/about_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/about"
        android:textColor="@color/blackColor"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/about_icon"
        app:layout_constraintTop_toBottomOf="@+id/security_text" />

</androidx.constraintlayout.widget.ConstraintLayout>